Bug 96805 - IBus/KMFL characters are not "swallowed" - unimplemented AccessibleEditableText components
Summary: IBus/KMFL characters are not "swallowed" - unimplemented AccessibleEditableTe...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard:
Keywords: accessibility
Depends on:
Blocks: a11y, Accessibility
  Show dependency treegraph
 
Reported: 2015-12-29 16:02 UTC by Justin L
Modified: 2020-10-27 18:53 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2015-12-29 16:02:33 UTC
Various editable parts of LibreOffice do not support AccessibleEditableText even though they are editable. Since LO advertises support for system call "delete surrounding text" these editable areas missing the implementation are not properly handled by input methods like ibus-kmfl.

-writer comments: sw/source/uibase/docvw/SidebarTxtControlAcc.cxx?
-draw comments:   sd/source/core/annotations/Annotation.cxx?
-draw tables:     svx/source/table/accessibletableshape.cxx?
-math:            starmath/source/edit.cxx?


(see Bug 91641 for details about ibus/kmfl setup to replicate the problem of having composing characters (like ";n" not being swallowed up when creating "ŋ".)
Comment 1 Justin L 2016-01-05 15:38:28 UTC
draw tables already are AccessibleEditable.  The problem was related to initial focus, and being able to switch focus when moving between the different cells.  See bug 96685.

See https://gerrit.libreoffice.org/#/c/21046/ for a proposed fix for Writer Comments.
Comment 2 Aron Budea 2016-12-05 01:39:58 UTC
I trust your assessment, and am thus setting this to NEW.
However, since it's not really a meta bug (in the sense that it isn't a common collective report for many separate bug reports), removing the tag.
Comment 3 Alex ARNAUD 2017-07-17 17:02:34 UTC
(In reply to Aron Budea from comment #2)
> I trust your assessment, and am thus setting this to NEW.
> However, since it's not really a meta bug (in the sense that it isn't a
> common collective report for many separate bug reports), removing the tag.

Hello Aron,

Could you provide a steps-by-steps description for this bug ? 

I don't understand the user consequence of this bug.

Best regards.
Comment 4 Aron Budea 2017-07-24 23:37:50 UTC
(In reply to Alex ARNAUD from comment #3)
> Could you provide a steps-by-steps description for this bug ? 
> 
> I don't understand the user consequence of this bug.

Hi Alex, Justin is a long-time LibreOffice developer, and this seemed to be an issue described on a level that is closer to devs, I trusted his expertise, and didn't bother actually reproducing it.

My understanding is that this is related to the feature that is described in the last sentence in the description.
With some input systems special characters can be composed using multiple simple characters (eg. can be typed with keyboard), and then the combinations are replaced with the respective special character. For this certain UI components has to support specific calls ("delete surrounding text") that is apparently missing.
Comment 5 QA Administrators 2018-07-25 02:39:01 UTC Comment hidden (obsolete, spam)
Comment 6 Justin L 2020-06-17 15:21:19 UTC
Repro 7.1+, testing with writer and draw comments.
Comment 7 Justin L 2020-10-26 09:34:46 UTC
(In reply to Justin L from comment #0)
> -math:            starmath/source/edit.cxx?

Well, imagine that. It looks like this was fixed in 5.2, from
author	Justin Luth on 2016-03-09 16:49:52 +0000
commit 598e6a024163f1510d076000788b7745625f5ed5
   tdf#96685 - ensure FindFocus a11y context is valid EditableText

At least, that is my guess.  A bibisect pointed to the range of https://cgit.freedesktop.org/libreoffice/core/log/?id=67c8049a3abcaf9aa692fc9ba768b5db9fbb2f05&qt=range&q=45701913f642b17aabd67b52de9002cc79cf07ae..3a8844752c22e18d27aa310ae859f8cb660865b9&ofs=50
Comment 8 Justin L 2020-10-27 05:51:51 UTC
(In reply to Justin L from comment #0)
> -writer comments: sw/source/uibase/docvw/SidebarTxtControlAcc.cxx?

Fixed in 7.1, but hard to pinpoint exactly which commit in bibisect it is. git checkout xyz isn't consistent, so somehow certain libraries must not be reloading or refreshing. Anyway, my best guess would be that it is fixed by

author	Caolán McNamara on 2020-10-25 22:02:17 +0100
commit ce5e41ab99af350ca8f4b9fef3017d53f3526f83
Related: tdf#137620 use existing SalEvent::SurroundingTextRequest
for signalIMRetrieveSurrounding
Comment 9 Justin L 2020-10-27 18:53:56 UTC
(In reply to Justin L from comment #0)
> -draw comments:   sd/source/core/annotations/Annotation.cxx?

fix in 7.1 by author Caolán McNamara on 2020-10-27 17:00:59 +0100
commit b9405fbc4e19901c78d136895c5ab0437d8450ac
Resolves: tdf#137620 add DeleteSurroundingText at vcl::Window level