tdf#96805 - make SidebarTxtControl AccessibleEditableText

Change-Id: Ic4df920bbdead3e745d9d0d324d133d7bd39250f